# Dash_Cam

./: CMakeLists.txt  Makefile  README.md
app/: drv_daemon.h  dvr_daemon.c  dvr_daemon.h  main.c
config/: dvr.conf
core/: config_manager.c  encoder.c  encoder.h  recoder.c  recoder.h  recorder.c  recorder.h  video_pipeline.c  video_pipeline.h  video_pipleline.h
drivers/camera/: v4l2_capture.c  v4l2_capture.h
drivers/sensors/: gsensor.c  gsensor.h
drivers/storage/: sdcard_manager.c  sdcard_manager.h
include/: common.h  config_manager.h  error_codes.h  logger.h
utils/: frame_queue.c  frame_queue.h
